# internal/models/user.go
@@ -1,20 +1,29 @@
 package models
 
 import (
+	"errors"
 	"time"
 
 	"gorm.io/gorm"
 )
 
+type Role string
+
+const (
+	RolePatient      Role = "patient"
+	RoleProfessional Role = "professional"
+)
+
 type User struct {
-	ID        uint   `gorm:"primaryKey" json:"id"`
-	Name      string `json:"name"`
-	Email     string `gorm:"unique" json:"email"`
-	Password  string `json:"-"`
-	Role      string `json:"role"` // "patient" ou "professional"
-	CreatedAt time.Time
-	UpdatedAt time.Time
-	DeletedAt gorm.DeletedAt `gorm:"index" json:"-"`
+	ID                  uint   `gorm:"primaryKey" json:"id"`
+	Name                string `json:"name"`
+	Email               string `gorm:"unique" json:"email"`
+	Password            string `json:"-"`
+	Role                Role
+	CreatedAt           time.Time
+	UpdatedAt           time.Time
+	DeletedAt           gorm.DeletedAt       `gorm:"index" json:"-"`
+	ProfessionalProfile *ProfessionalProfile `gorm:"foreignKey:UserID"`
 }
 
 type UserRegisterRequest struct {
@@ -40,4 +49,13 @@ type UserUpdateRequest struct {
 	Name  string `json:"name"`
 	Email string `json:"email"`
 	Role  string `json:"role"`
+}
+
+func ParseRole(role string) (Role, error) {
+	switch Role(role) {
+	case RolePatient, RoleProfessional:
+		return Role(role), nil
+	default:
+		return "", errors.New("invalid role")
+	}
 }
